# rustbase

./: .dockerignore  .editorconfig  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  sonar-project.properties
.cargo/: config.toml
.github/workflows/: release.yml  rust-clippy.yml  rust.yml  sonarcloud.yml  unit-test.yml
proto/: rustbase.proto
scripts/: release.sh
src/: build.rs  config.rs  main.rs  spec.rs
src/cli/: README.md  mod.rs  restore.rs  snapshot.rs  upgrade.rs
src/config/: README.md  mod.rs  schema.rs  spec.rs
src/crypto/: README.md  decrypt.rs  encrypt.rs  generate_bytes.rs  hash.rs  mod.rs
src/db/: database.rs  mod.rs
src/db/cache/: README.md
src/db/crypto/: mod.rs
src/db/sharding/: README.md  mod.rs  sharding_collection.rs  sharding_document.rs  unsharding_collection.rs  unsharding_document.rs
src/db/storage/: README.md  collection.rs  document.rs  mod.rs  read.rs  types.rs  write.rs
src/query/: README.md  mod.rs  parse.rs  parser.rs
src/query/grammar/: rustbase.pest
src/server/: README.md  auth.rs  cache.rs  main.rs  mod.rs
src/server/cache/: README.md  mod.rs
src/server/engine/: README.md  core.rs  interface.rs  mod.rs  var_manager.rs  worker_manager.rs
src/server/route/: README.md  mod.rs
src/server/wirewave/: README.md  authentication.rs  authorization.rs  mod.rs  server.rs
src/utils/: config.rs  crypto.rs  mod.rs
