[package]
name = "rustbase"
version = "0.1.4-beta"
edition = "2021"
build = "./src/build.rs"

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0"
proctitle = "0.1.1"
sysinfo = "0.23.5"
tokio = { version = "1.17.0", features = ["full"] }
chrono = { version = "0.4.19", features = ["serde"] }
hex = "0.4.3"
bson = "2.4.0"
dustdata = "0.4.2"
tonic = "0.8.0"
prost = "0.11.0"
colored = "2.0.0"
path-absolutize = "3.0.13"
num_cpus = "1.13.1"
pest = "2.4.0"
pest_derive = "2.4.0"
rand = "0.8.5"


[build-dependencies]
winres = "0.1"
tonic-build = "0.8.0"

[package.metadata.winres]
OriginalFilename = "rustbase.exe"
LegalCopyright = "Rustbase © 2022, The Rustbase Project Developers"
ProductName = "Rustbase Database"
ProductVersion = "0.1.4-beta"
FileDescription = "Rustbase Database Server"