[package]
name = "rustbase"
version = "0.3.0"
edition = "2021"
build = "./src/build.rs"

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0"
proctitle = "0.1.1"
tokio = { version = "1.23.1", features = ["full"] }
chrono = { version = "0.4.19", features = ["serde"] }
bson = "2.4.0"
dustdata = "1.2.1"
colored = "2.0.0"
path-absolutize = "3.0.13"
num_cpus = "1.13.1"
pest = "2.4.0"
pest_derive = "2.4.0"
rand = "0.8.5"
async-trait = "0.1.58"
tokio-rustls = "0.23.4"
rustls-pemfile = "1.0.1"
rustls = "0.20.7"
ctrlc = { version = "3.2.4", features = ["termination"] }
rayon = "1.6.1"
scram = "0.6.0"

[build-dependencies]
winres = "0.1"

[package.metadata.winres]
OriginalFilename = "rustbase.exe"
LegalCopyright = "Rustbase © 2023, The Rustbase Project Developers"
ProductName = "Rustbase Database"
ProductVersion = "0.3.0"
FileDescription = "Rustbase Database Server"
